--- a/src/Lenoard.Core.csproj
+++ b/src/Lenoard.Core.csproj
@@ -50,6 +50,7 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="DataUri.cs" />
+    <Compile Include="ITrackingObject.cs" />
     <Compile Include="Lazy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
