--- a/netcore/Lenoard.Core/project.json
+++ b/netcore/Lenoard.Core/project.json
@@ -13,6 +13,9 @@
             "compile": {
                 "include": [ "../../GlobalAssemblyInfo.cs", "../../src/**/*.cs" ]
             },
+            "embed": {
+                "include": [ "../../src/*.resx" ]
+            },
             "define": [ "NetCore" ],
             "keyFile": "../../Lenoard.snk",
             "xmlDoc": true,
