--- a/netcore/Lenoard.Core/project.json
+++ b/netcore/Lenoard.Core/project.json
@@ -1,9 +1,11 @@
-﻿{
+{
   "version": "1.0.0-*",
 
     "dependencies": {
         "NETStandard.Library": "1.6.0",
-        "System.Collections.Specialized": "4.0.1" 
+        "System.Collections.Specialized": "4.0.1",
+        "System.Reflection.TypeExtensions": "4.1.0",
+        "System.Linq.Queryable": "4.0.1" 
     },
 
   "frameworks": {
