--- a/src/Lenoard.Core.csproj
+++ b/src/Lenoard.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="RangeExtensions.cs" />
+    <Compile Include="SemanticVersion.cs" />
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
