--- a/src/Lenoard.Core.csproj
+++ b/src/Lenoard.Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Range.cs" />
     <Compile Include="RangeExtensions.cs" />
     <Compile Include="SemanticVersion.cs" />
+    <Compile Include="SemanticVersionComparator.cs" />
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
