--- a/src/Lenoard.Core.csproj
+++ b/src/Lenoard.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DataUri.cs" />
     <Compile Include="Lazy.cs" />
     <Compile Include="Pair.cs" />
+    <Compile Include="PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="RangeExtensions.cs" />
